--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-onclickoutside": "^6.12.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
